Add player in game

--- a/pictionary.html
+++ b/pictionary.html
@@ -16,6 +16,17 @@
             background: white;
             border: 1px solid black;
         }
+        label {
+            display: block;
+        }
+        .users {
+            position: fixed;
+            bottom: 0;
+            right: 0;
+            padding: 10px;
+            background: white;
+            border: 1px solid black;
+        }
     </style>
 </head>
 <body>
@@ -29,8 +40,9 @@
             Color: 
             <input type="color" value='#00000' class="js-color">
         </label>
-        
     </form>
+
+    <ul class="js-users users"></ul>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -68,6 +80,16 @@
             stroke(data.color);
             line(data.mouseX, data.mouseY,data.pmouseX, data.pmouseY);
         })
+
+        const usersList = document.querySelector('.js-users');
+        socket.on('users', data => {
+            usersList.innerHTML = '';
+            data.forEach(username => {
+                const li = document.createElement('li');
+                li.innerHTML = username;
+                usersList.appendChild(li);
+            })
+        });
     </script>
 </body>
 </html>
